--- a/index.html
+++ b/index.html
@@ -285,7 +285,7 @@
             <div class="hero-content">
                 <h1>ThiaSoft</h1>
                 <p>Революционный инструмент для профессионального пентестинга и анализа безопасности. Абсолютно бесплатный и полностью функциональный!</p>
-                <a href="https://www.dropbox.com/scl/fi/6dnzioq4p39jajtlite9y/ThiaSoft-v.2.5.zip?rlkey=ahl9j2wgouiv75onini8t1r93&st=3t2ro0ls&dl=1" class="download-btn">Начать работу</a>
+                <a href="https://mega.nz/file/k8RUwAZL#fH1ygrsBbY9vb7gyRcpZ3oze7ResBmvYG-YZDYQzA9Y" class="download-btn">Начать работу</a>
             </div>
         </section>
 
