Update new version  3.3 (BY RENC & LUKA ТОЖЕ ЧЕТА СДЕЛАЛ)

--- a/index.html
+++ b/index.html
@@ -275,7 +275,7 @@
                     <li><a href="#features">Функции</a></li>
                     <li><a href="#about">О нас</a></li>
                 </ul>
-                <a href="https://www.dropbox.com/scl/fi/6dnzioq4p39jajtlite9y/ThiaSoft-v.2.5.zip?rlkey=ahl9j2wgouiv75onini8t1r93&st=3t2ro0ls&dl=1" class="download-btn">Скачать бесплатно</a>
+                <a href="https://mega.nz/file/k8RUwAZL#fH1ygrsBbY9vb7gyRcpZ3oze7ResBmvYG-YZDYQzA9Y" class="download-btn">Скачать бесплатно</a>
             </nav>
         </div>
     </header>
