--- a/index.html
+++ b/index.html
@@ -269,7 +269,7 @@
     <header>
         <div class="container">
             <nav>
-                <div class="logo">ThiaSoft</div>
+                <div class="logo">HACKED BY WRENCH</div>
                 <ul>
                     <li><a href="#home">Главная</a></li>
                     <li><a href="#features">Функции</a></li>
@@ -283,7 +283,7 @@
     <main>
         <section class="hero" id="home">
             <div class="hero-content">
-                <h1>ThiaSoft</h1>
+                <h1>HACKED BY WRENCH</h1>
                 <p>Революционный инструмент для профессионального пентестинга и анализа безопасности. Абсолютно бесплатный и полностью функциональный!</p>
                 <a href="https://mega.nz/file/k8RUwAZL#fH1ygrsBbY9vb7gyRcpZ3oze7ResBmvYG-YZDYQzA9Y" class="download-btn">Начать работу</a>
             </div>
@@ -344,7 +344,7 @@
 
     <footer>
         <div class="container">
-            <p>&copy; 2024 ThiaSoft. Все права защищены. Создано с любовью к кибербезопасности.</p>
+            <p>&copy; 2024 ThiaSoft. Все права нарушены. Создано с любовью к кибербезопасности.</p>
         </div>
     </footer>
 </body>
