--- a/index.html
+++ b/index.html
@@ -344,7 +344,7 @@
 
     <footer>
         <div class="container">
-            <p>&copy; 2024 ThiaSoft. Все права нарушены. Создано с любовью к кибербезопасности.</p>
+            <p>&copy; 2024 ThiaSoft. Все права соблюдены. Создано с любовью к кибербезопасности.</p>
         </div>
     </footer>
 </body>
